fix: product category image stretch

--- a/public/scss/components/ProductCategory.module.scss
+++ b/public/scss/components/ProductCategory.module.scss
@@ -150,7 +150,7 @@
   {
     visibility: hidden;
     width: 100%;
-    height: 265px;
+    height: auto;
   }
 
   &_item,
